@@ -2,7 +2,7 @@
 
 import pyx, math
 from diagrams import FeynDiagram
-from points import Point
+#from points import Point
 from utils import Visible
 
 
@@ -28,7 +28,7 @@ class Arrow(pyx.deco.deco, pyx.attr.attr):
 ## Label
 class Label(Visible):
     """General label, unattached to any diagram elements"""
-    def __init__(self, text, pos=None, x=None, y=None, angle=0):
+    def __init__(self, text, pos=None, x=None, y=None):
         if pos != None:
             self.pos = pos
         elif x != None and y != None:
@@ -36,14 +36,11 @@ class Label(Visible):
         else:
             self.pos = Point(0, 0)
         self.size = pyx.text.size.normalsize
-        self.angle = angle
         self.text = text
         self.textattrs = []
 
         ## Add this to the current diagram automatically
         FeynDiagram.currentDiagram.add(self)
-
-
 
     def draw(self, canvas):
         textattrs = pyx.attr.mergeattrs([pyx.text.halign.center, pyx.text.vshift.mathaxis, self.size] + self.textattrs)
@@ -51,11 +48,40 @@ class Label(Visible):
         canvas.insert(t)
 
 
+
 ## PointLabel
 class PointLabel(Label):
     """Label attached to points on the diagram"""
     def __init__(self, point, text, displace=0.3, angle=0):
-        pass
+        self.size = pyx.text.size.normalsize
+        self.displace = pyx.unit.length(displace)
+        self.angle = angle
+        self.text = text
+        self.point = point
+        self.textattrs = []
+
+
+    def getPoint(self):
+        return self.point
+
+
+    def setPoint(self, point):
+        self.point = point
+        return self
+
+
+    def draw(self, canvas):
+        if FeynDiagram.options.VDEBUG:
+            canvas.fill(pyx.path.circle(self.point.getX(), self.point.getY(), 0.05), [pyx.color.rgb.green])
+        #print self.angle, math.radians(self.angle), math.cos(math.radians(self.angle))
+        #print self.displace
+        #print self.point.getX(), self.point.getX() + self.displace * math.cos(math.radians(self.angle))
+        x = self.point.getX() + self.displace * math.cos(math.radians(self.angle))
+        y = self.point.getY() + self.displace * math.sin(math.radians(self.angle))
+        textattrs = pyx.attr.mergeattrs([pyx.text.halign.center, pyx.text.vshift.mathaxis, self.size] + self.textattrs)
+        t = pyx.text.defaulttexrunner.text(x, y, self.text, textattrs)
+        canvas.insert(t)
+
 
 
 ## LineLabel
